Adding introduce to Kotlin description.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
         dolore magna aliqua.
     </string>
     <string name="tvSearch">Cari materi Kotlin…</string>
-    <string name="tvIntroduceKotlin">Yuk kenalan dengan bahasa Kotlin</string>
+    <string name="tvIntroduceKotlin">Tentang Kotlin</string>
     <string name="tvStartYourJourney">Mulai belajar Kotlin</string>
     <string name="tvNull">Null</string>
     <string name="tvFollowing">Mengikuti</string>
