Adding introduce to Kotlin description.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     </string>
     <string name="tvSearch">Cari materi Kotlin…</string>
     <string name="tvIntroduceKotlin">Tentang Kotlin</string>
-    <string name="tvStartYourJourney">Mulai belajar Kotlin</string>
+    <string name="tvStartYourJourney">Mulai Belajar Kotlin</string>
     <string name="tvNull">Null</string>
     <string name="tvFollowing">Mengikuti</string>
     <string name="tvFollowingNumber">0</string>
