Moving data from main activity to another class.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
         dolore magna aliqua.
     </string>
-    <string name="tvSearch">Cari materi Kotlin…</string>
+    <string name="tvSearch">Cari</string>
+    <string name="tvSearchVideo">Cari video tutorial…</string>
     <string name="tvIntroduceKotlin">Tentang Kotlin</string>
+    <string name="tvTutorial">Tutorial</string>
     <string name="tvStartYourJourney">Mulai Belajar Kotlin</string>
     <string name="tvNull">Null</string>
     <string name="tvFollowing">Mengikuti</string>
