--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,14 @@
     <string name="tvInfo">Info</string>
     <string name="tvDescription">Deskripsi</string>
 
+    <!--Main Menu-->
+    <string name="tvKotlinBasic">Kotlin Dasar</string>
+    <string name="tvKotlinOOP">Kotlin OOP</string>
+    <string name="tvKotlinGeneric">Kotlin Generic</string>
+    <string name="tvKotlinCollection">Kotlin Collection</string>
+    <string name="tvKotlinCoroutine">Kotlin Coroutine</string>
+    <string name="tvKotlinUnitTesting">Kotlin Unit Testing</string>
+
     <!--Bottom Menu-->
     <string name="icHome">Beranda</string>
     <string name="icFavorite">Favorit</string>
