Updating string resource to set app version.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="tvAppInfo">Info Aplikasi</string>
     <string name="tvInfo">Info</string>
     <string name="tvDescription">Deskripsi</string>
+    <string name="tvAppVersion">1.0</string>
 
     <!--Main Menu-->
     <string name="tvKotlinBasic">Tutorial Kotlin Dasar</string>
