Adding new blank fragment as container for all subjects.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,7 @@
     <string name="icHome">Beranda</string>
     <string name="icFavorite">Favorit</string>
     <string name="icAbout">Tentang</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
