--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="tvInfo">Info</string>
     <string name="tvDescription">Deskripsi</string>
     <string name="tvAppVersion">1.0</string>
+    <string name="tvSubtitle">2 Materi</string>
 
     <!--Main Menu-->
     <string name="tvKotlinBasic">Tutorial Kotlin Dasar</string>
@@ -39,7 +40,5 @@
     <string name="icHome">Beranda</string>
     <string name="icFavorite">Favorit</string>
     <string name="icAbout">Tentang</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
