Updating home UI and some drawables.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,6 @@
 <resources>
     <string name="app_name">Kotlin Hero</string>
     <string name="tvOne">1.</string>
-    <string name="tvLipsum">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-        dolore magna aliqua.
-    </string>
     <string name="tvSearch">Cari…</string>
     <string name="tvSearchVideo">Cari video tutorial…</string>
     <string name="tvIntroduceKotlin">Tentang Kotlin</string>
@@ -27,14 +23,8 @@
     <string name="tvDescription">Deskripsi</string>
     <string name="tvAppVersion">1.0</string>
     <string name="tvSubtitle">2 Materi</string>
-
-    <!--Main Menu-->
-    <string name="tvKotlinBasic">Tutorial Kotlin Dasar</string>
-    <string name="tvKotlinOOP">Tutorial Kotlin OOP</string>
-    <string name="tvKotlinGeneric">Tutorial Kotlin Generic</string>
-    <string name="tvKotlinCollection">Tutorial Kotlin Collection</string>
-    <string name="tvKotlinCoroutine">Tutorial Kotlin Coroutine</string>
-    <string name="tvKotlinUnitTesting">Tutorial Kotlin Unit Testing</string>
+    <string name="tvAskToLearnToday">Mau belajar apa hari ini?</string>
+    <string name="tvTitle">Tutorial Kotlin Dasar</string>
 
     <!--Bottom Menu-->
     <string name="icHome">Beranda</string>
